improved program logic